--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "next": "15.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "tailwind-merge": "^3.3.1"
+  "tailwind-merge": "^3.3.1",
+  "@langchain/groq": "^0.1.2",
+  "langchain": "^0.3.12",
+  "zod": "^3.23.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
